# kat

./: .gitignore  CMakeLists.txt  README.md  kat.cpp  kat.hpp  main.cpp  params.cpp  params.hpp  resources.hpp
src/: kat.hpp  params.cpp  params.hpp  resources.hpp
